
THIS IS NOT A RELEASE YET

MediaWiki 1.32 is an alpha-quality branch and is not recommended for use in
production.

=== Configuration changes in 1.32 ===
* (T115414) The $wgEnableAPI and $wgEnableWriteAPI settings, deprecated in 1.31,
  have been removed.
* The $wgUseAjax setting, deprecated in 1.31, is now ignored.
* The $wgSiteSupportPage setting, unused since 1.5, was removed.
* The default quality of JPEG thumbnails generated by GD was reduced from 95 to
  80. The quality of JPEG thumbnails is now configurable through the new setting
  $wgJpegQuality (default 80). This aligns the quality to what ImageMagick uses.
* $wgExperimentalHtmlIds, deprecated since 1.30, has been removed. The
  'html5-legacy' value for $wgFragmentMode is no longer accepted.
* The experimental Html5Internal and Html5Depurate tidy drivers were removed.
  RemexHtml, which is the default, should be used instead.

=== New features in 1.32 ===
* (T112474) Generalized the ResourceLoader mechanism for overriding modules
  using a particular page during edit previews.
* Added 'ApiParseMakeOutputPage' hook.

=== External library changes in 1.32 ===
* …

==== Upgraded external libraries ====
* Updated QUnit from 2.4.0 to 2.6.0.

==== New external libraries ====
* …

==== Removed and replaced external libraries ====
* …

=== Bug fixes in 1.32 ===
* …

=== Action API changes in 1.32 ===
* …

=== Action API internal changes in 1.32 ===
* Added 'ApiParseMakeOutputPage' hook.

=== Languages updated in 1.32 ===
MediaWiki supports over 350 languages. Many localisations are updated regularly.
Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.

* (T193566) Added language support for Ambonese Malay (abs).

=== Breaking changes in 1.32 ===
* $wgRequestTime, deprecated in 1.25, was removed. Use
  $_SERVER['REQUEST_TIME_FLOAT'] or WebRequest::getElapsedTime() instead.
* The MediaWikiI18N class, deprecated in 1.31, was removed.