@@ -365,6 +365,9 @@
 	"customcssprotected": "You do not have permission to edit this CSS page because it contains another user's personal settings.",
 	"customjsonprotected": "You do not have permission to edit this JSON page because it contains another user's personal settings.",
 	"customjsprotected": "You do not have permission to edit this JavaScript page because it contains another user's personal settings.",
+	"sitecssprotected": "You do not have permission to edit this CSS page because it may affect all visitors",
+	"sitejsonprotected": "You do not have permission to edit this JSON page because it may affect all visitors",
+	"sitejsprotected": "You do not have permission to edit this JavaScript page because it may affect all visitors",
 	"mycustomcssprotected": "You do not have permission to edit this CSS page.",
 	"mycustomjsonprotected": "You do not have permission to edit this JSON page.",
 	"mycustomjsprotected": "You do not have permission to edit this JavaScript page.",
@@ -1238,6 +1241,9 @@
 	"right-editusercss": "Edit other users' CSS files",
 	"right-edituserjson": "Edit other users' JSON files",
 	"right-edituserjs": "Edit other users' JavaScript files",
+	"right-editsitecss": "Edit sitewide CSS",
+	"right-editsitejson": "Edit sitewide JSON",
+	"right-editsitejs": "Edit sitewide JavaScript",
 	"right-editmyusercss": "Edit your own user CSS files",
 	"right-editmyuserjson": "Edit your own user JSON files",
 	"right-editmyuserjs": "Edit your own user JavaScript files",
