@@ -563,6 +563,9 @@
 	"customcssprotected": "Used as error message. Parameters:\n* $1 - (Unused) the action the user attempted to perform",
 	"customjsonprotected": "Used as error message. Parameters:\n* $1 - (Unused) the action the user attempted to perform",
 	"customjsprotected": "Used as error message. Parameters:\n* $1 - (Unused) the action the user attempted to perform",
+	"sitecssprotected": "Used as error message. Parameters:\n* $1 - (Unused) the action the user attempted to perform",
+	"sitejsonprotected": "Used as error message. Parameters:\n* $1 - (Unused) the action the user attempted to perform",
+	"sitejsprotected": "Used as error message. Parameters:\n* $1 - (Unused) the action the user attempted to perform",
 	"mycustomcssprotected": "Used as error message. Parameters:\n* $1 - (Unused) the action the user attempted to perform",
 	"mycustomjsonprotected": "Used as error message. Parameters:\n* $1 - (Unused) the action the user attempted to perform",
 	"mycustomjsprotected": "Used as error message. Parameters:\n* $1 - (Unused) the action the user attempted to perform",
@@ -1436,6 +1439,9 @@
 	"right-editusercss": "{{doc-right|editusercss}}\nSee also:\n* {{msg-mw|Right-editmyusercss}}",
 	"right-edituserjson": "{{doc-right|edituserjson}}\nSee also:\n* {{msg-mw|Right-editmyuserjson}}",
 	"right-edituserjs": "{{doc-right|edituserjs}}\nSee also:\n* {{msg-mw|Right-editmyuserjs}}",
+	"right-editsitecss": "{{doc-right|editsitecss}}",
+	"right-editsitejson": "{{doc-right|editsitejson}}",
+	"right-editsitejs": "{{doc-right|editsitejs}}",
 	"right-editmyusercss": "{{doc-right|editmyusercss}}\nSee also:\n* {{msg-mw|Right-editusercss}}",
 	"right-editmyuserjson": "{{doc-right|editmyuserjson}}\nSee also:\n* {{msg-mw|Right-edituserjson}}",
 	"right-editmyuserjs": "{{doc-right|editmyuserjs}}\nSee also:\n* {{msg-mw|Right-edituserjs}}",
