@@ -10,13 +10,17 @@ production.
   have been removed.
 * The $wgUseAjax setting, deprecated in 1.31, is now ignored.
 * The $wgSiteSupportPage setting, unused since 1.5, was removed.
-* The default quality of JPEG thumbnails generated by GD was reduced from 95 to
   80. The quality of JPEG thumbnails is now configurable through the new setting
   $wgJpegQuality (default 80). This aligns the quality to what ImageMagick uses.
 * $wgExperimentalHtmlIds, deprecated since 1.30, has been removed. The
   'html5-legacy' value for $wgFragmentMode is no longer accepted.
 * The experimental Html5Internal and Html5Depurate tidy drivers were removed.
   RemexHtml, which is the default, should be used instead.
+* The right to edit sitewide Javascript (e.g. MediaWiki:Common.js), CSS or JSON was separated from
+  'editinterface' and is available under 'editsitejs'/'editsitecss'/'editsitejson'. Having
+  'editinterface' is still necessary to edit such pages.
+* A new user group, 'jseditor', is added for controlling access to sitewide JS. No other
+  group has 'editsitejs' or 'edituserjs' (edit another user's Javascript) by default.
 
 === New features in 1.32 ===
 * (T112474) Generalized the ResourceLoader mechanism for overriding modules
